# tfhe_encrypted_calculator

./: Cargo.toml  README.md
src/: main.rs
