[package]
name = "tfhe_encrypted_calculator"
version = "0.1.0"
edition = "2021"
default-run = "tfhe_encrypted_calculator"

[dependencies]
tfhe = { version = "0.11.3", features = ["integer"] }
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
bincode = "1.3.3"
serde = "1.0.216"